0.28:
 * Bazaar support for merged commits (Nick Moffit).
 * C++ efficiency improvements (Oliver Smith).
 * Improved cvs-exp log compatibility.
 * Re-show name of user when adding a new action if user is idle.

0.27:
 * Display time stops at the time of the last commit.
 * Users fade out when end reached rather than ending abruptly.
 * Position slider is now hidden by default if recording a video.
 * Automatic camera rotation for better use of screen space.
 * Support international keyboards (Peter Kjellerstedt).
 * C++ efficiency improvements (Jacob Metcalfe).
 * Fixed crash when reading from STDIN.
 * Fixed intermittent crash closing Gource when using --output-ppm-stream.
 * Added ini style config file support (see --load/save-config).
 * Added screenshot button (F12). Screenshots respect the alpha channel.
 * Added --transparent to make the background see-through (for screenshots).
 * Added --logo and --background-image options.
 * Added --dont-stop option for manual exiting when recording videos.
 * Added --stop-at-time option to stop Gource after a number of seconds.
 * Added --hide 'mouse' option.
 * Added --highlight-dirs option.
 * Added --file-extensions to show filename extensions only.
 * Added --user-filter REGEX option.
 * Allow --file-idle-time 0 (files will never expire).
 * Allow --start-position 'random' to set a random start position.
 * --log-command VCS replaces multiple --log-command-VCS options.
 * Replaced --disable-progress and --disable-bloom with arguments to --hide.

0.26a:
 * Updated to latest version of GL autoconf macros.

0.26:
 * Improved mouse dragging.
 * Holding right mouse button and moving the mouse rotates the view.
 * The middle mouse button now toggles the camera mode.
 * Username positions now scale correctly.
 * Simulation time no longer incremented while paused, counting towards file time lag.
 * M key now toggles mouse visibility.
 * Added --hide option to use instead of multiple --hide-ELEMENT options.

0.25: