@@ -124,6 +124,9 @@ Colourize user images.
 \fB\-\-crop AXIS\fR
 Crop view on an axis (vertical,horizontal).
 .TP
+\fB\-\-padding FLOAT\fR
+Camera view padding.
+.TP
 \fB\-\-multi\-sampling\fR
 Enable multi-sampling.
 .TP
