@@ -3,6 +3,8 @@
  * C++ efficiency improvements (Oliver Smith).
  * Improved cvs-exp log compatibility.
  * Re-show name of user when adding a new action if user is idle.
+ * Added --padding option to control camera view padding.
+ * More accurate camera tracking (tracks the bounding boxes of objects).
 
 0.27:
  * Display time stops at the time of the last commit.
